Changed java21 to java17